<?xml version="1.0"?>
<package format="3">
  <name>lidar_odometry_node</name>
  <version>0.3.1</version>
  <description>Simple LiDAR odometry node</description>

  <maintainer email="17959258+markgol@users.noreply.github.com">Mark Stegall</maintainer>
  <license>GPL-3.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
